--- a/Excercise 1/Bonus_CSS_HTML_Reference_sheet.html
+++ b/Excercise 1/Bonus_CSS_HTML_Reference_sheet.html
@@ -55,6 +55,21 @@ img {
     border-radius: 5px; /* Rounds image corners */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adds shadow */
 }
+div {
+    background-color: yellow;
+    color: red;
+    all: initial;
+}
+
+span {
+    font-weight: bold; /* Bolds text */
+    font-style: italic; /* Italicizes text */
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse; /* Removes border between cells */
+}
         </code>
     </pre>
 </body>
